tests/fixtures/extensions/invalid-syntax/src/index.ts
export const name = "invalid-extension"

// Intentional syntax error for testing
export function handler( {
	return { broken
}
